EI-320 - Clean up chart api calls